--- a/.github/workflows/docker-publish-weekly.yml
+++ b/.github/workflows/docker-publish-weekly.yml
@@ -20,11 +20,14 @@ jobs:
         with:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Get latest Bun version
+        id: version
+        uses: oven-sh/setup-bun@v1
+        run: echo "VERSION=$(bun --version)" >> $GITHUB_OUTPUT
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
             context: .
             platforms: linux/amd64,linux/arm64
             push: true
-            tags: squishyu/bun-alpine:latest
-
+            tags: squishyu/bun-alpine:latest,squishyu/bun-alpine:${{ steps.version.outputs.VERSION }}
